Fix: basic main page and element alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
-.nav {
-  width: 30%;
+.App {
+  /*Hopefully this controls the main parent element...*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
+/* .nav {
+  width: 30%;
+} */
 
 .active {
   background-color: #841983;
@@ -16,9 +23,10 @@ nav {
   background-color: #A4D555;
   display: flex;
   font-size: 1.5em;
-  height: 10vh;
+  /* height: 10vh; */
   justify-content: space-around;
   width: 100%;
+  padding: 2%;
 }
 
 h1 {
